[package]
  name = "laser"
  version = "0.0.2"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "Laser demos for lase.rs"
  keywords = [ "laser", "projector", "hardware", "ILDA", "DAC" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/rust-laser"
  documentation = "https://docs.rs/laser"

[[bin]]
  name = "webcam_spiral"
  path = "src/webcam_spiral.rs"

[dependencies]
  camera_capture = "0.3"
  image = "0.7"
  lase = "0.0.2"

